tests/trybuild_fails/invariant_dep_extraction.stderr
error[E0597]: `pair` does not live long enough
  --> tests/trybuild_fails/invariant_dep_extraction.rs:27:5
   |
24 |     let pair: Pair<InvarOwner> = Pair::new(InvarOwner);
   |         ---- binding `pair` declared here
...
27 |     pair.with_dependent(|dep| dep);
   |     ^^^^                      --- returning this value requires that `pair` is borrowed for `'static`
   |     |
   |     borrowed value does not live long enough
28 | }
   | - `pair` dropped here while still borrowed
